doc/examples/InvalidTests/TestInvalidIf.agl
if "ABC" do 
{
    print "Hello";
}          
else do
    print "nao imprime :(";
    print "imprime :)";  
    